Mon Jul 25 23:39:33 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rake/test_rake_directory_task.rb (TestRakeDirectoryTask#
	  test_directory_win32): fixed wrong test.

Mon Jul 25 22:36:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (struct METHOD), gc.c (gc_marks), vm_method.c
	  (rb_gc_mark_unlinked_live_method_entries): fix SEGV bug.
	  rb_method_entry_t was free'd even when the method is still on the
	  stack if it is BMETHOD (i.e., Method#call).  This is because
	  rb_method_entry_t is embedded in struct METHOD.  This commit
	  separates them and marks the live method entries.
	  See [ruby-core:38449] in detail.  fix [Bug #5047] [ruby-core:38171]

Mon Jul 25 22:14:37 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/xmlrpc/client.rb: Fix possible HTTP header formatting failure by
	  'Basic' header. Long username caused the base64 String truncation in
	  HTTP header which is not allowed. See #5046.

	* test/xmlrpc/test_webrick_server.rb: test it.

Mon Jul 25 15:04:33 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl.rb: End of transition period introduced by
	  [ruby-dev:38018]. From the next version of 1.9.3, you should use
	    require "openssl"
	  instead of
	    require "openssl/ssl"
	  and
	    require "openssl/x509"

Mon Jul 25 13:46:38 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl/x509.rb: Cosmetic change: move definition
	  introduced in r30152 to x509-internal.rb.

Mon Jul 25 13:09:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Avoid randomly generated
	  SSLError from SSLSocket just after invoking SSLSocket#close.
	  OpenSSL's SSL_shutdown could try to send alert packet and it might
	  set SSLerr(global error stack) as the result. It causes the next
	  SSL read/write operation to fail by unrelated reason.

	  By design, we're ignoring any error at SSL_shutdown() so we clear
	  global error stack after SSL_shutdown is called. See #5039.
