@@ -1,3 +1,9 @@
+Mon Jul 25 23:51:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* proc.c: pre-allocate the unlinked_method_entry_list_entry struct to
+	  avoid memory allocation during GC.  based on a patch from Eric Wong.
+	  [ruby-core:38498]
+
 Mon Jul 25 23:39:33 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/rake/test_rake_directory_task.rb (TestRakeDirectoryTask#
